--- a/requirements.txt
+++ b/requirements.txt
@@ -1,89 +1,89 @@
-amply==0.1.2
-argon2-cffi==20.1.0
-attrs==20.2.0
-autopep8==1.6.0
-backcall==0.2.0
-bleach==3.1.5
-Brotli==1.0.9
-certifi==2020.6.20
-cffi==1.14.2
-chardet==3.0.4
-click==8.0.4
-colorama==0.4.3
-cycler==0.10.0
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-decorator==4.4.2
-defusedxml==0.6.0
-docutils==0.16
-entrypoints==0.3
-et-xmlfile==1.1.0
-Flask==2.0.3
-Flask-Compress==1.11
-idna==2.10
-ipykernel==5.3.4
-ipympl==0.5.8
-ipython==7.18.1
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-itsdangerous==2.1.1
-jedi==0.17.2
-Jinja2==3.0.3
-joblib==1.0.1
-json5==0.9.5
-jsonschema==3.2.0
-jupyter-client==6.1.7
-jupyter-core==4.6.3
-jupyterlab==2.2.6
-jupyterlab-server==1.2.0
-keras==2.8.0
-kiwisolver==1.2.0
-MarkupSafe==2.1.0
-matplotlib==3.3.1
-mistune==0.8.4
-nbconvert==5.6.1
-nbformat==5.0.7
-notebook==6.1.3
-numpy==1.19.1
-openpyxl==3.0.9
-packaging==20.4
-pandas==1.1.1
-pandocfilters==1.4.2
-parso==0.7.1
-pickleshare==0.7.5
-Pillow==7.2.0
-plotly==5.6.0
-prometheus-client==0.8.0
-prompt-toolkit==3.0.7
-PuLP==2.3
-pycodestyle==2.8.0
-pycparser==2.20
-Pygments==2.6.1
-pyparsing==2.4.7
-PyQtWebEngine==5.12
-pyrsistent==0.16.0
-python-dateutil==2.8.1
-pytz==2020.1
-pywin32==228
-pywinpty==0.5.7
-pyzmq==19.0.2
-requests==2.24.0
-scikit-learn==0.24.2
-scipy==1.5.2
-seaborn==0.11.2
-Send2Trash==1.5.0
-six==1.15.0
-tenacity==8.0.1
-terminado==0.8.3
-testpath==0.4.4
-threadpoolctl==2.2.0
-toml==0.10.2
-tornado==6.0.4
-traitlets==5.0.3
-urllib3==1.25.10
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.0.3
-widgetsnbextension==3.5.1
-xlrd==2.0.1
+amply
+argon2-cffi
+attrs
+autopep8
+backcall
+bleach
+Brotli
+certifi
+cffi
+chardet
+click
+colorama
+cycler
+dash-core-components
+dash-html-components
+dash-table
+decorator
+defusedxml
+docutils
+entrypoints
+et-xmlfile
+Flask
+Flask-Compress
+idna
+ipykernel
+ipympl
+ipython
+ipython-genutils
+ipywidgets
+itsdangerous
+jedi
+Jinja2
+joblib
+json5
+jsonschema
+jupyter-client
+jupyter-core
+jupyterlab
+jupyterlab-server
+keras
+kiwisolver
+MarkupSafe
+matplotlib
+mistune
+nbconvert
+nbformat
+notebook
+numpy
+openpyxl
+packaging
+pandas
+pandocfilters
+parso
+pickleshare
+Pillow
+plotly
+prometheus-client
+prompt-toolkit
+PuLP
+pycodestyle
+pycparser
+Pygments
+pyparsing
+PyQtWebEngine
+pyrsistent
+python-dateutil
+pytz
+pywin32
+pywinpty
+pyzmq
+requests
+scikit-learn
+scipy
+seaborn
+Send2Trash
+six
+tenacity
+terminado
+testpath
+threadpoolctl
+toml
+tornado
+traitlets
+urllib3
+wcwidth
+webencodings
+Werkzeug
+widgetsnbextension
+xlrd
